src/components/Screenshots.module.css
.screenshotsContainer {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}
  
.screenshot {
  /* From Figma specs */
  filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.15));
  border-radius: 15px;
  /* Figma reports 20px, but that doesn't work in CSS */
  margin: 15px;
}

.screenshotContainer {
  text-align: center;
}

.screenshotCaption {
  color: var(--ifm-color-content-secondary);
}

.screenshotLarge {
  /* From Figma specs */
  box-shadow: 0px 4px 18px 2px rgba(0, 0, 0, 0.25);
  border-radius: 20px;
  margin: 20px;
}

